# mashed-potato

./: .helmignore  Cargo.toml  Chart.yaml  Dockerfile  README.md  values.yaml
.github/: dependabot.yml
src/: main.rs
src/api/: dish.rs  menu.rs  mod.rs  quizlet.rs  result.rs  search.rs
templates/: _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml
