[package]
name = "mashed-potato"
version = "0.4.2"
authors = ["Åke Amcoff <ake.amcoff@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
failure = "0.1"
serde = { version = "1.0", features = ["derive"] }
scraper = "0.12"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.5", features = ["serde"] }
actix-web = "2.0"
actix-rt = "1"
futures = "0.3"
itertools = "0.9"
